--- a/main.html
+++ b/main.html
@@ -8,6 +8,12 @@
 
 <body>
 	<!-- the entire body must be written by student -->
+	<p><b>What is the capital of india?</b></p>
+	 <input type="radio">New Delhi
+	<br>
+	<input type="radio">Mumbai
+	<br>
+	<blockquote style="max-width:600px;margin:10px;padding:15px;border-left:8px solid green;background-color:#f8fffe;font-weight:bold;">New Delhi is the captial of India and an administrative district of NCT Delhi.</blockquote>
     <script type="text/javascript" src="./script.js">
 </script>
 
