--- a/main.html
+++ b/main.html
@@ -26,9 +26,9 @@
 
     <!-- Quotation Section -->
     <section>
-        <blockquote class="blockquote">
+        <blockquote class="blockquote" cite="https://en.wikipedia.org/wiki/New_Delhi">
             New Delhi is the capital of India and an administrative district of NCT Delhi. 
-          
+      
         </blockquote>
     </section>
 </script>
