--- a/main.html
+++ b/main.html
@@ -8,30 +8,18 @@
 
 <body>
 	<!-- the entire body must be written by student -->
-	<section>
-        
-        <p>What is the capital of India?</p>
-        <form>
-            <label>
-                <input type="radio" name="capital" value="new-delhi">
-                New Delhi
-            </label>
-            <br>
-            <label>
-                <input type="radio" name="capital" value="mumbai">
-                Mumbai
-            </label>
-        </form>
-    </section>
-
-    <!-- Quotation Section -->
-    <section>
-        <blockquote class="blockquote" cite="https://en.wikipedia.org/wiki/New_Delhi">
-            New Delhi is the capital of India and an administrative district of NCT Delhi. 
-      
-        </blockquote>
-    </section>
-</script>
+    <h1>What is the captial of India?</h1>
+	<input type="radio">New Delhi<br>
+	<input type="radio">Mumbai<br>
+	<blockquote style="max-width: 600px;
+            margin: 10px;
+            padding: 15px;
+            border-left: 8px solid green;
+            background-color: #f8fffe;
+            font-weight: bold;" cite="https://en.wikipedia.org/wiki/New_Delhi">
+		New Delhi is the capital of India and an administrative district of NCT Delhi.
+		
+	</blockquote>
 
 </body>
 
